[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
phf = { version = "0.9", features = ["macros"] }
structopt = "0.3"
